--- a/.env
+++ b/.env
@@ -25,9 +25,12 @@ DB_PORT=3306
 DB_DATABASE=mytalent_alavi
 DB_USERNAME=mytalent_alavi
 DB_PASSWORD=mn@13861386
-#DB_DATABASE=alavi
-#DB_USERNAME=root
-#DB_PASSWORD=
+#DB_DATABASE=mytalent_alavi
+#DB_USERNAME=mytalent_alavi
+#DB_PASSWORD=mn@13861386
+DB_DATABASE=alavi
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
