--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:pwCvxRpTXSwMJ6q9/ifruhc044pXbay4K7ZfUUZWmqI=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=https://nabline.rad-learning-english.ir
 
@@ -22,9 +22,6 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mytalent_alavi
-DB_USERNAME=mytalent_alavi
-DB_PASSWORD=mn@13861386
 #DB_DATABASE=mytalent_alavi
 #DB_USERNAME=mytalent_alavi
 #DB_PASSWORD=mn@13861386
